이소희 수정

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <li class="nav-item">
   <a class="nav-link fs-5" href="content.html" aria-label="A sample content page">
-     Content
+    이소희 이혜인
   </a>
 </li>
 
