--- a/content.html
+++ b/content.html
@@ -105,10 +105,10 @@
       <div class="row">
         <div class="col-12">
           <!-- check fix : name -->
-          <h1 class="display-1 fw-bold">김찬희😎
+          <h1 class="display-1 fw-bold">이소희와 이혜인😎
             <br>
           <!-- check fix : sid -->
-            20171134</h1>
+            20학번 새내기(2020ver.)</h1>
           <p class="lead border-top pt-5 mt-5" data-aos="fade-up">어디 내 생에
             이제야 알겠다,
             바람이 분다고
