--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0 list-group list-group-horizontal">
       <li class="nav-item">
   <a class="nav-link fs-5" href="index.html" aria-label="Homepage">
-    Home
+    우리 구역.
   </a>
 </li>
 <!-- check fix : Content to your name-->
@@ -88,7 +88,7 @@
 
 <li class="nav-item">
   <a class="nav-link fs-5" href="content.html" aria-label="A sample content page">
-    이소희 이혜인
+    이소희와 이혜인
   </a>
 </li>
 
@@ -104,11 +104,11 @@
   <div class="container py-vh-4 position-relative mt-5 px-vw-5 text-center">
   <div class="row d-flex align-items-center justify-content-center py-vh-5">
     <div class="col-12 col-xl-10">
-      <span class="h5 text-secondary fw-lighter">IR LAB 😎</span>
+      <span class="h5 text-secondary fw-lighter">Lee-혜인과 Lee-소희 😎</span>
       <h1 class="display-huge mt-3 mb-3 lh-1">Git test용 페이지</h1>
     </div>
     <div class="col-12 col-xl-8">
-      <p class="lead text-secondary">바람이 불지 않으면세상 살이가 아니다.그래,산다는 것은바람이 잠 자기를기다리는 게 아니라그 부는 바람에몸을 맡기는 것이다바람이 약해 지는 것을기다리는 게 아니라그 바람 속을헤쳐 나가는 것이다.두 눈 똑바로 뜨고 지켜 볼 것,바람이 드셀 수록왜 연은 높이 나는 지</p>
+      <p class="lead text-secondary">이 페이지는 이제 우리가 점령했다 하하하 바람 어쩌고는 더이상 없어 ! ! 난 참지 못하거든 🥳 찬희선배 메롱메롱 여긴 이미 점령했지롱 영역표시 🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸</p>
     </div>
     <div class="col-12 text-center">
       <a href="#" class="btn btn-xl btn-light">아무것도 아닌 버튼
