--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
   <div class="row d-flex align-items-center justify-content-center py-vh-5">
     <div class="col-12 col-xl-10">
       <span class="h5 text-secondary fw-lighter">Lee-혜인과 Lee-소희 😎</span>
-      <h1 class="display-huge mt-3 mb-3 lh-1">Git test용 페이지</h1>
+      <h1 class="display-huge mt-3 mb-3 lh-1">호서대 당근마켓</h1>
     </div>
     <div class="col-12 col-xl-8">
-      <p class="lead text-secondary">이 페이지는 이제 우리가 점령했다 하하하 바람 어쩌고는 더이상 없어 ! ! 난 참지 못하거든 🥳 찬희선배 메롱메롱 여긴 이미 점령했지롱 영역표시 🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸</p>
+      <p class="lead text-secondary">이 페이지는 이제 우리가 점령했다 하하하 바람 어쩌고는 더이상 없어 ! ! 그저 중고거래만 존재할뿐. 찬희선배 메롱메롱 여긴 이미 점령했지롱 영역표시 🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸🥸</p>
     </div>
     <div class="col-12 text-center">
       <a href="#" class="btn btn-xl btn-light">아무것도 아닌 버튼
