--- a/content.html
+++ b/content.html
@@ -105,33 +105,22 @@
       <div class="row">
         <div class="col-12">
           <!-- check fix : name -->
-          <h1 class="display-1 fw-bold">이소희와 이혜인😎
+          <h1 class="display-1 fw-bold">[사용감 조금 있음/ 에눌가능/ 당시 최고의 인기!]
             <br>
           <!-- check fix : sid -->
-            20학번 새내기(2020ver.)</h1>
-          <p class="lead border-top pt-5 mt-5" data-aos="fade-up">어디 내 생에
-            이제야 알겠다,
-            바람이 분다고
-            기다리고 만 있어서는
-            안 된다는 것을
-            기다리는 이에게
-            바람은 더 드 세게
-            몰아 닥칠 뿐이라는 것을
-            바람이 분다는 것은
-            헤쳐 나가라는 뜻이다
-            누가 나가 떨어지든 간에
-            한 판 붙어 보라는 뜻이다.
-            살다 보니
-            바람 아닌 게 없더라
-            내 걸어 온
-            모든 길이 바람 길 이더라.
+            2020ver. 새내기 팝니다.</h1>
+          <p class="lead border-top pt-5 mt-5" data-aos="fade-up">
+            사용감이 조금 있읍니다.
+            친절하게 연락주시면 에눌 가능합니다.
+            당시 최고의 인기. 허니버터칩과 대왕카스테라를 이어 품절대란을 이끌었지만 학업스트레스로 인한 이슈때문에 
+            점점 성적이 하향세를 보여 지금은 매물로 많이 나오고 있습니다만.. 그래도 찾는 사람이 있는 것 같아 올립니다
           </p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12 py-vh-2">
-      <img src="img/webp/abstract9.webp" width="1446" height="982" alt="abstract image" class="img-fluid position-relative rounded-5 shadow" data-aos="zoom-up">
+      <img src="img/yummy" width="1446" height="982" alt="abstract image" class="img-fluid position-relative rounded-5 shadow" data-aos="zoom-up">
     </div>
     </div>
         <div class="col-12 col-lg-10 col-xl-8">
